tests-integration/fixtures/checking/1772818320_do_ado_constrained/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Tuple ::
  forall (@a :: Type) (@b :: Type). (a :: Type) -> (b :: Type) -> Tuple (a :: Type) (b :: Type)
map ::
  forall (@f :: Type -> Type).
    Functor (f :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      ((a :: Type) -> (b :: Type)) ->
      (f :: Type -> Type) (a :: Type) ->
      (f :: Type -> Type) (b :: Type))
apply ::
  forall (@f :: Type -> Type).
    Apply (f :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (f :: Type -> Type) ((a :: Type) -> (b :: Type)) ->
      (f :: Type -> Type) (a :: Type) ->
      (f :: Type -> Type) (b :: Type))
pure ::
  forall (@f :: Type -> Type).
    Applicative (f :: Type -> Type) =>
    (forall (a :: Type). (a :: Type) -> (f :: Type -> Type) (a :: Type))
discard ::
  forall (@m :: Type -> Type).
    Discard (m :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (m :: Type -> Type) (a :: Type) ->
      ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
      (m :: Type -> Type) (b :: Type))
bind ::
  forall (@m :: Type -> Type).
    Bind (m :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (m :: Type -> Type) (a :: Type) ->
      ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
      (m :: Type -> Type) (b :: Type))
testDo ::
  forall (m :: Type -> Type). Monad (m :: Type -> Type) => (m :: Type -> Type) (Tuple Int String)
testDo' ::
  forall (t :: Type -> Type). Bind (t :: Type -> Type) => (t :: Type -> Type) (Tuple Int String)
testAdo ::
  forall (f :: Type -> Type).
    Applicative (f :: Type -> Type) => (f :: Type -> Type) (Tuple Int String)
testAdo' ::
  forall (t :: Type -> Type).
    Applicative (t :: Type -> Type) => (t :: Type -> Type) (Tuple Int String)
testDoDiscard :: forall (m :: Type -> Type). Monad (m :: Type -> Type) => (m :: Type -> Type) Int
testDoDiscard' :: forall (t :: Type -> Type). Discard (t :: Type -> Type) => (t :: Type -> Type) Int

Types
Tuple :: Type -> Type -> Type
Functor :: (Type -> Type) -> Constraint
Apply :: (Type -> Type) -> Constraint
Applicative :: (Type -> Type) -> Constraint
Discard :: (Type -> Type) -> Constraint
Bind :: (Type -> Type) -> Constraint
Monad :: (Type -> Type) -> Constraint

Classes
class forall (f :: Type -> Type). Functor (f :: Type -> Type)
  map ::
  forall (@f :: Type -> Type).
    Functor (f :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      ((a :: Type) -> (b :: Type)) ->
      (f :: Type -> Type) (a :: Type) ->
      (f :: Type -> Type) (b :: Type))
class forall (f :: Type -> Type). Functor (f :: Type -> Type) <= Apply (f :: Type -> Type)
  apply ::
  forall (@f :: Type -> Type).
    Apply (f :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (f :: Type -> Type) ((a :: Type) -> (b :: Type)) ->
      (f :: Type -> Type) (a :: Type) ->
      (f :: Type -> Type) (b :: Type))
class forall (f :: Type -> Type). Apply (f :: Type -> Type) <= Applicative (f :: Type -> Type)
  pure ::
  forall (@f :: Type -> Type).
    Applicative (f :: Type -> Type) =>
    (forall (a :: Type). (a :: Type) -> (f :: Type -> Type) (a :: Type))
class forall (m :: Type -> Type). Applicative (m :: Type -> Type) <= Discard (m :: Type -> Type)
  discard ::
  forall (@m :: Type -> Type).
    Discard (m :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (m :: Type -> Type) (a :: Type) ->
      ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
      (m :: Type -> Type) (b :: Type))
class forall (m :: Type -> Type). Applicative (m :: Type -> Type) <= Bind (m :: Type -> Type)
  bind ::
  forall (@m :: Type -> Type).
    Bind (m :: Type -> Type) =>
    (forall (a :: Type) (b :: Type).
      (m :: Type -> Type) (a :: Type) ->
      ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
      (m :: Type -> Type) (b :: Type))
class forall (m :: Type -> Type). Bind (m :: Type -> Type) <= Monad (m :: Type -> Type)

Roles
Tuple = [Representational, Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Discard (m :: Type -> Type)
  --> 44:1..44:44
   |
44 | testDoDiscard :: forall m. Monad m => m Int
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Monad (m :: Type -> Type) is in scope
  trivia: Bind (m :: Type -> Type) is in scope
  trivia: Applicative (m :: Type -> Type) is in scope
  trivia: Apply (m :: Type -> Type) is in scope
  trivia: Functor (m :: Type -> Type) is in scope
